--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
 	<!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <!-- bootstrap 4 css-->
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+   <!-- bootstrap 4 jquery-->
+   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+   <!-- bootstrap 4 popper js-->
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+   <!-- bootstrap 4 javascript-->
+   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>My Bootstrap Template</title>
@@ -44,6 +50,52 @@
 
 
 <!-- Slider Image -->
+
+<div id="demo" class="carousel slide" data-ride="carousel">
+	<ul class="carousel-indicators">
+		<li data-target="#demo" data-slide-to="0" class="active"></li>
+		<li data-target="#demo" data-slide-to="1"></li>
+		<li data-target="#demo" data-slide-to="2"></li>
+	</ul>
+
+	<div class="carousel-inner">
+		<div class="carousel-item active">
+			<img src="img/sample1.jpg" alt="coffee&lapton on a desk" width="1920" height="1280">
+		<div class="carousel-caption">
+			<h3>Coffe & Code</h3>
+			<p>Having a great time coding & drinking coffee</p>
+		</div>
+	</div>
+
+	<div class="carousel-item">
+			<img src="img/sample2.jpg" alt="coffee&lapton on a desk" width="1920" height="1280">
+		<div class="carousel-caption">
+			<h3>Work & Code</h3>
+			<p>Having a great time Working & drinking coffee</p>
+		</div>
+	</div>
+
+	<div class="carousel-item">
+			<img src="img/sample3.jpg" alt="coffee&lapton on a desk" width="1920" height="1280">
+		<div class="carousel-caption">
+			<h3>Coffe, Code & Work</h3>
+			<p>Having a great time coding, drinking coffee & working at the office</p>
+			</div>
+		</div>
+	</div>
+
+	<a class="carousel-control-prev" href="#demo" data-slide="prev">
+		<span class="carousel-control-prev-icon"></span>
+	</a>
+
+	<a class="carousel-control-next" href="#demo" data-slide="next">
+		<span class="carousel-control-next-icon"></span>
+	</a>
+
+</div>
+
+<!-- jumbotron -->
+
 
 
 <!-- Card Section -->
