Added Jumbotron Section to page

--- a/index.html
+++ b/index.html
@@ -95,7 +95,12 @@
 </div>
 
 <!-- jumbotron -->
-
+<div class="jumbotron jumbotron-fluid">
+	<div class="container">
+		<h2>Bootstrap Template</h2>
+		<p>A simple Bootsrap 4 Template made with HTML, CSS and Javascript. Made to be mobile responsive on all screen platforms.</p>
+	</div>
+</div>
 
 
 <!-- Card Section -->
