Added card section

--- a/index.html
+++ b/index.html
@@ -104,6 +104,39 @@
 
 
 <!-- Card Section -->
+ <div class="container-fluid padding">
+    <div class="row padding">
+	<div class="card border-success col-md-4">
+		<div class="card-header bg-transparent border-success"><h3>Header</h3></div>
+		<div class="card-body text-success">
+			<h5>Lorem ipsum dolor sit amet</h5>
+			<p class="card-text">Nullam eu dui vel purus ornare fringilla ac in ex. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Etiam in scelerisque nisi.</p>
+		</div>
+		<div class="card-footer bg-transparent border-success "><button type="button" class="btn btn-success">Footer Path</button></div>
+	</div>
+
+
+	<div class="card border-success col-md-4">
+		<div class="card-header bg-transparent border-success"><h3>Header</h3></div>
+		<div class="card-body text-success">
+			<h5>Lorem ipsum dolor sit amet</h5>
+			<p class="card-text">Nullam eu dui vel purus ornare fringilla ac in ex. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Etiam in scelerisque nisi.</p>
+		</div>
+		<div class="card-footer bg-transparent border-success "><button type="button" class="btn btn-success">Footer Path</button></div>
+	</div>
+
+
+	<div class="card border-success col-md-4">
+		<div class="card-header bg-transparent border-success"><h3>Header</h3></div>
+		<div class="card-body text-success">
+			<h5>Lorem ipsum dolor sit amet</h5>
+			<p class="card-text">Nullam eu dui vel purus ornare fringilla ac in ex. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Etiam in scelerisque nisi.</p>
+		</div>
+		<div class="card-footer bg-transparent border-success "><button type="button" class="btn btn-success">Footer Path</button></div>
+	</div>
+</div>
+</div>
+
 
 
 <!-- Portfolio Section -->
