created portfolio section

--- a/index.html
+++ b/index.html
@@ -136,10 +136,46 @@
 	</div>
 </div>
 </div>
-
+<br>
 
 
 <!-- Portfolio Section -->
+<h2>Portfolio Heading</h2>
+	<div class="container-fluid padding">
+    <div class="row padding">
+		<div class="card-group">
+			<div class="card">
+				<img class="card-img-top"  src="img/team1.png" alt="card image cap" width="259" height="180">
+				<div class="card-body">
+					<a href="#" class="btn btn-primary"><h4 class="card-title">Project 1</h4></a>
+					<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque dapibus venenatis felis a pulvinar. Maecenas tempor in tortor eget ultrices.</p>
+				</div>
+			</div>
+
+			<div class="card">
+				<img src="img/team2.png" class="card-img-top" alt="card image cap" width="259" height="180">
+				<div class="card-body">
+					<a href="#" class="btn btn-primary"><h4 class="card-title">Project 1</h4></a>
+					<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque dapibus venenatis felis a pulvinar. Maecenas tempor in tortor eget ultrices.</p>
+				</div>
+			</div>
+
+
+
+			<div class="card">
+				<img src="img/team3.png" class="card-img-top" alt="card image cap" width="259" height="180">
+				<div class="card-body">
+					<a href="#" class="btn btn-primary"><h4 class="card-title">Project 1</h4></a>
+					<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque dapibus venenatis felis a pulvinar. Maecenas tempor in tortor eget ultrices.</p>
+				</div>
+			</div>
+
+		</div>
+	</div>
+</div>
+
+
+
 
 
 <!-- Two Column Section -->
