added images to portfolio section

--- a/index.html
+++ b/index.html
@@ -145,17 +145,17 @@
     <div class="row padding">
 		<div class="card-group">
 			<div class="card">
-				<img class="card-img-top"  src="img/team1.png" alt="card image cap" width="259" height="180">
+				<img class="card-img-top"  src="img/team1.png" alt="card image cap">
 				<div class="card-body">
-					<a href="#" class="btn btn-primary"><h4 class="card-title">Project 1</h4></a>
+					<a href="#" class="btn btn-primary"><h5 class="card-title">Project One</h5></a>
 					<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque dapibus venenatis felis a pulvinar. Maecenas tempor in tortor eget ultrices.</p>
 				</div>
 			</div>
 
 			<div class="card">
-				<img src="img/team2.png" class="card-img-top" alt="card image cap" width="259" height="180">
+				<img src="img/team2.png" class="card-img-top" alt="card image cap">
 				<div class="card-body">
-					<a href="#" class="btn btn-primary"><h4 class="card-title">Project 1</h4></a>
+					<a href="#" class="btn btn-primary"><h5 class="card-title">Project Two</h5></a>
 					<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque dapibus venenatis felis a pulvinar. Maecenas tempor in tortor eget ultrices.</p>
 				</div>
 			</div>
@@ -163,12 +163,47 @@
 
 
 			<div class="card">
-				<img src="img/team3.png" class="card-img-top" alt="card image cap" width="259" height="180">
+				<img src="img/team3.png" class="card-img-top" alt="card image cap">
 				<div class="card-body">
-					<a href="#" class="btn btn-primary"><h4 class="card-title">Project 1</h4></a>
+					<a href="#" class="btn btn-primary"><h5 class="card-title">Project Three</h5></a>
 					<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque dapibus venenatis felis a pulvinar. Maecenas tempor in tortor eget ultrices.</p>
 				</div>
 			</div>
+
+		</div>
+	</div>
+</div>
+
+		<div class="container-fluid padding">
+    		<div class="row padding">
+				<div class="card-group">
+
+			<div class="card">
+				<img src="img/team3.png" class="card-img-top" alt="card image cap">
+				<div class="card-body">
+					<a href="#" class="btn btn-primary"><h5 class="card-title">Project Four</h5></a>
+					<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque dapibus venenatis felis a pulvinar. Maecenas tempor in tortor eget ultrices.</p>
+				</div>
+			</div>
+
+
+			<div class="card">
+				<img src="img/team2.png" class="card-img-top" alt="card image cap">
+				<div class="card-body">
+					<a href="#" class="btn btn-primary"><h5 class="card-title">Project Five</h5></a>
+					<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque dapibus venenatis felis a pulvinar. Maecenas tempor in tortor eget ultrices.</p>
+				</div>
+			</div>
+
+
+			<div class="card">
+				<img src="img/team1.png" class="card-img-top" alt="card image cap">
+				<div class="card-body">
+					<a href="#" class="btn btn-primary"><h5 class="card-title">Project Six</h5></a>
+					<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque dapibus venenatis felis a pulvinar. Maecenas tempor in tortor eget ultrices.</p>
+				</div>
+			</div>
+
 
 		</div>
 	</div>
