Added two column section

--- a/index.html
+++ b/index.html
@@ -211,9 +211,29 @@
 
 
 
-
-
 <!-- Two Column Section -->
+	<div class="container-fluid padding">
+		<div class="row padding">
+			<div class="col-lg-6">
+				<h3>Modern Business Features</h3>
+				<p>The Modern Business template by Start Bootstrap includes:</p>
+				<ul>
+					<li>Bootstrap v4</li>
+					<li>Javascript</li>
+					<li>Php</li>
+					<li>Css/Sass</li>
+					<li>Html</li>
+					<li>Wordpress</li>
+				</ul>
+				<p>Sed eu diam libero. Fusce ut venenatis augue. Phasellus purus libero, imperdiet in convallis et, porta vitae purus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
+			</div>
+
+			<div class="col-lg-6">
+				<img src="img/q.jpg" class="img-fluid">
+			</div>
+
+		</div>
+	</div>
 
 
 <!-- One column section/Call to action -->
