Added two column section & call to action Button

--- a/index.html
+++ b/index.html
@@ -236,7 +236,18 @@
 	</div>
 
 
-<!-- One column section/Call to action -->
+<!-- Two columns section/Call to action -->
+<div class="container-fluid padding">
+	<div class="row padding">
+		<div class="col-lg-8">
+		<p>Donec accumsan libero et ex aliquam, vitae vestibulum sem cursus. Integer a finibus urna, id ultricies ligula. Nullam eleifend nulla ut ipsum accumsan, eu suscipit eros finibus. Mauris et metus massa. Fusce tempor orci vitae nibh hendrerit, sed eleifend risus laoreet. </p>
+		</div>
+
+		<div class="col-lg-4">
+			<button type="button" class="btn btn-secondary btn-lg btn-block">Call To Action</button>
+		</div>
+	</div>
+</div>
 
 
 
