--- a/index.html
+++ b/index.html
@@ -254,6 +254,18 @@
 
 <!-- Footer Section -->
 
+<!-- Footer -->
+<footer>
+  <div class="container-fluid padding">
+  	<div class="padding text-center">
+  		<h5>&copy; <a href="https://desoga10.github.io/Portfolio/" target="_blank"> Desoga Concept</a>  |2018</h5>
+	</div>
+  </div>
+
+
+</footer>
+
+
 
 </body>
 </html>
